Fix body-off-screen bug

--- a/css/droplet.css
+++ b/css/droplet.css
@@ -44,6 +44,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  overflow: hidden;
 }
 .droplet-ace {
   position: absolute;
